--- a/package.json
+++ b/package.json
@@ -17,18 +17,22 @@
     "@tanstack/react-query": "^5.55.4",
     "cloudinary": "^2.4.0",
     "critters": "^0.0.24",
-    "framer-motion": "^11.11.8",
+    "framer-motion": "^11.11.15",
+    "jose": "^5.9.6",
     "mongodb": "^6.8.1",
     "mongoos": "^0.0.1-security",
     "mongoose": "^8.6.1",
-    "next": "^14.2.13",
-    "next-auth": "^4.24.7",
+    "next": "^14.2.17",
+    "next-auth": "^4.24.10",
     "photoswipe": "^5.4.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-h5-audio-player": "^3.9.3",
     "react-hook-form": "^7.53.0",
     "react-photoswipe-gallery": "^3.0.2",
-    "react-spinners": "^0.14.1"
+    "react-spinners": "^0.14.1",
+    "socket.io": "^4.8.0",
+    "socket.io-client": "^4.8.0"
   },
   "devDependencies": {
     "postcss": "^8",
